# ifar-mlops

./: .gitignore  GOVERNANCE.md  INFRA_SETUP.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
MODEL_CARD/: TEMPLATE.md
configs/: histology_grade.yaml  mammo_classifier.yaml  mammo_detector.yaml
data/: .gitignore  README.md
data/pointers/: .gitkeep
notebooks/: README.md  train_mammo_classifier.ipynb  train_mammo_classifier_drive.ipynb
scripts/: bootstrap_hf.py  extract_to_repo.sh
src/mlops/: __init__.py
src/mlops/datasets/: __init__.py  build_cbis_manifest.py  cbis_ddsm.py
src/mlops/eval/: __init__.py  metrics.py
src/mlops/export/: __init__.py  export_artifact.py
src/mlops/models/: __init__.py  efficientnet.py
src/mlops/registry/: __init__.py  hf_hub.py
src/mlops/train/: train_histology.py  train_mammo_classifier.py  train_mammo_detector.py
tests/: test_build_manifest.py  test_metrics.py
